--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SHABAN-MD",
+  "name": "sameer md",
   "version": "6.0.0",
   "description": "WHATSAPP BOT CREATED BY MR SHABAN⁴⁵",
   "main": "index.js",
